# Uni_labs

./: .gitignore  Dockerfile  applied_lab2.ipynb  big_data_lab3.ipynb  big_data_lab6.ipynb  big_data_lab7.ipynb  big_data_lab8.ipynb  dask_lab.ipynb  geo_lab2.ipynb  geodata.ipynb  lab1.ipynb  pyproject.toml
