[project]
name = "uni-labs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cython>=3.1.3",
    "dora",
    "mypy>=1.18.1",
    "nbqa>=1.9.1",
    "numba>=0.60.0",
    "pandas>=2.3.2",
    "pandas-stubs>=2.2.2.240807",
    "pydantic>=2.11.9",
    "scikit-learn>=1.6.1",
]

[tool.uv.sources]
dora = { git = "https://github.com/NathanEpstein/Dora.git" }
