[project]
name = "uni-labs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cython>=3.1.3",
    "dask[complete]>=2024.8.0",
    "dora",
    "folium>=0.20.0",
    "geopandas>=1.0.1",
    "geopy>=2.4.1",
    "graphviz>=0.21",
    "ipywidgets>=8.1.7",
    "mapclassify>=2.8.1",
    "matplotlib>=3.9.4",
    "mypy>=1.18.1",
    "nbformat>=5.10.4",
    "nbqa>=1.9.1",
    "numba>=0.60.0",
    "pandas>=2.3.2",
    "pandas-stubs>=2.2.2.240807",
    "pathway>=0.2.0",
    "plotly>=6.3.1",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.9",
    "s3fs>=2025.9.0",
    "scikit-image>=0.24.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "shapely>=2.0.7",
]

[tool.uv.sources]
dora = { git = "https://github.com/NathanEpstein/Dora.git" }
